Use file keys instead of FQNs as cache key